# prog_multi

./: pyproject.toml
fastapi-task-management/: .gitignore  pyproject.toml
fastapi-task-management/fastapi_task_management/: application.py  main.py
fastapi-task-management/fastapi_task_management/config/: database.py  log_config.py
fastapi-task-management/fastapi_task_management/controller/: task_controller.py
fastapi-task-management/fastapi_task_management/domain/dto/: dtos.py
fastapi-task-management/fastapi_task_management/domain/model/: models.py
fastapi-task-management/fastapi_task_management/model/: models.py
fastapi-task-management/fastapi_task_management/repository/: task_repository.py
fastapi-task-management/fastapi_task_management/service/: task_service.py
