[tool.poetry]
name = "fastapi-task-management"
version = "0.1.0"
description = ""
authors = ["Lucas Barbosa Defanti <lucasbdefanti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.31"
python-dotenv = "^1.0.1"
pydantic = "^2.8.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
